--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
 
         .head {
             color: #000;
-            background-color: yellow;
+            background-color: teal;
             vertical-align: top;
             font-size: 20px;
             
@@ -58,7 +58,7 @@
         .tail {
             padding-top: 17px;
             color: #000;
-            background-color: yellow;
+            background-color:coral;
             vertical-align: bottom;
         }
 
@@ -169,7 +169,7 @@
     
     <div class="tail">
         <h4>
-            This Model is Developed by Ishu Kumar
+            This Model is Developed by khushboo
         </h4>
 
     </div>
