--- a/templates/index.html
+++ b/templates/index.html
@@ -169,7 +169,7 @@
     
     <div class="tail">
         <h4>
-            This Model is Developed by khushboo
+            This Model is Developed by Aditya Singh Chouhan
         </h4>
 
     </div>
